<resources>
    <string name="app_name">Splittor</string>
    <string name="add_a_new_one">Add a new one!</string>
    <string name="add_contact">Add contact</string>
    <string name="add_new_group">Add new group</string>
    <string name="amount">Amount</string>
    <string name="amount_not_set">Amount not set</string>

    <string name="contacts">Contacts</string>
    <string name="create">Create</string>
    <string name="create_group">Create group</string>

    <plurals name="d_members">
        <item quantity="one">%1$d member</item>
        <item quantity="other">%1$d members</item>
    </plurals>

    <string name="go_back">Go back</string>
    <string name="group_details">Group details</string>
    <string name="group_info">Group info</string>
    <string name="groups">Groups</string>

    <string name="no_contacts_added">No contacts added</string>
    <string name="no_groups_yet">No groups yet</string>

    <string name="title">Title</string>
    <string name="title_not_set">Title not set</string>

    <string name="total_">Total:</string>

</resources>
